2001-04-22  Gary Houston  <ghouston@arglist.com>

	* net_db.c: remove bogus "close" declaration.
	(inet_aton declaration, scm_inet_aton, scm_inet_ntoa,
	scm_inet_netof, scm_lnaof, scm_inet_makeaddr, INADDR_ANY etc.):
	moved to socket.c.
	* net_db.h: declarations moved too.

	* socket.c (scm_htonl, scm_ntohl): use uint32_t instead of unsigned
	long.
	(ipv6_net_to_num, ipv6_num_to_net): new static procedures.
	(VALIDATE_INET6): new macro.
	(scm_inet_pton, scm_inet_ntop): new procedures, implementing
	inet-pton and inet-ntop.
	(scm_fill_sockaddr): use VALIDATE_INET6 and ipv6_num_to_net.
	(scm_addr_vector): use ipv6_net_to_num.
	
2001-04-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eq.c (scm_equal_p), ramap.c (scm_init_ramap):  Don't compute the
	smob number explicitly.  Use SCM_TC2SMOBNUM instead.

	* gc.c (MARK, scm_gc_sweep):  Only check for illegal heap objects
	when compiled in debug mode.

	(scm_gc_sweep):  Only call smob's free function if it is defined.

	* print.c (scm_iprin1):  No need to check for validity of smob
	type or existence of print function.

	* smob.[ch] (scm_smobs):  Made into a fixed size global array.
	Resizing will not work well with preemptive threading.

	* smob.c (scm_smob_print):  Don't use SCM_CDR to access smob data.

	(scm_make_smob_type):  Extracted initialization of smob
	descriptors to scm_smob_prehistory.  Don't use scm_numsmob outside
	of the critical section.

	(scm_smob_prehistory):  Initialize all smob descriptors.  By
	default, don't assign a smob free function:  Most smob types don't
	need one.

	* smob.h (SMOBH, SCM_SMOB_H):  Renamed SMOBH to SCM_SMOB_H.

2001-04-21  Gary Houston  <ghouston@arglist.com>

	* socket.c (FLIP_NET_HOST_128): new macro.
	(scm_fill_sockaddr): use new macro.
	(scm_addr_vector): completed IPv6 address support.  added const
	to the address parameter.

2001-04-20  Gary Houston  <ghouston@arglist.com>

	* socket.c (scm_fill_sockaddr): call htons for sin6_port.